--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <h1 class="styled"><span style="font-weight: normal;">Николай </span><br><span style="font-weight: normal;">Бабкин</span></h1>
                             <p class="mbr-section-subtitle">эксперт по развитию личностности,<br> бизнес тренер с 2012год, <br>автор курса "Жизнь с нуля", <br>автор 5 фильмов по развитию личности.</p>
 
-                            <div><a href="http://mobirise.com" class="btn btn-primary" role="button">learn more</a></div>
+                            <div><a href="index.html#subscribe2-o" class="btn btn-primary" role="button">Хочу тренинг<br></a></div>
                          </div> 
                       </div>
 
@@ -213,23 +213,23 @@
       <div class="row">
 
         <div class="mbr-cards-col col-lg-3 col-sm-6 col-xs-12">
-          <div class="timer count light">183</div>
-          <p>Projects</p>
+          <div class="timer count light">120</div>
+          <p>Семинаров</p>
         </div>
 
         <div class="mbr-cards-col col-lg-3 col-sm-6 col-xs-12">
-          <div class="timer count light">1</div>
-          <p>Years</p>
+          <div class="timer count light">12</div>
+          <p>Лет</p>
         </div>
 
         <div class="mbr-cards-col col-lg-3 col-sm-6 col-xs-12">
-          <div class="timer count light">47</div>
-          <p>Clients</p>
+          <div class="timer count light">8</div>
+          <p>Успешных бизнесов</p>
         </div>
 
         <div class="mbr-cards-col col-lg-3 col-sm-6 col-xs-12">
-          <div class="timer count light">583</div>
-          <p>Days</p>
+          <div class="timer count light">568</div>
+          <p>Клиентов</p>
         </div>
 
       </div>
@@ -262,7 +262,7 @@
                     </div>
                     <div class="mbr-plan-body card-block">
                       <div class="mbr-plan-list"><div><br></div><div><br></div><div>В наше время многие обесценивают профессию продавца, но умение продавать является неотъемлемой частью успеха. В этом курсе детально исследованы техники и алгоритмы продаж, используя которые вы можете управлять своими клиентами.&nbsp;</div><div><br></div><div><br></div><div><br></div><div>-навыки продаж (подготовка, установление контакта, АНиП, презентация, завершение сделки);</div><div>-управление клиентом (повторная покупка, отношение с клиентом, виды агентов, внимание к мелочам);</div><div>-муха и пчела;</div></div>
-                      <div class="mbr-plan-btn"><a href="https://mobirise.com" class="btn btn-black">view more</a></div>
+                      <div class="mbr-plan-btn"><a href="index.html#subscribe2-o" class="btn btn-black">хочу тренинг</a></div>
                     </div>
                 </div>
             </div>
@@ -285,7 +285,7 @@
                     </div>
                     <div class="mbr-plan-body card-block">
                       <div class="mbr-plan-list"><div>Развитие в ходе жизни является частью успеха, кто-то развивает свой бизнес, кто-то развивается или планирует развиваться по карьерной лестнице. Не зависимо какой путь вы выбрали кадры являются важной частью компании. Как получить высокую должность или как подобрать эффективного специалиста, который будет развивать бизнес вы узнаете из этого курса.</div><div><br></div><div>-типы сотрудников;</div><div>-кому отдают предпочтение;</div><div>-выявление сильных сторон;</div><div>-прокачка слабых сторон;</div><div>-создание профессионального резюме;</div><div>-настройка на вакансию;</div><div>-прохождение/прием собеседования.</div><div><br></div></div>
-                      <div class="mbr-plan-btn"><a href="https://mobirise.com" class="btn btn-black">view more</a></div>
+                      <div class="mbr-plan-btn"><a href="index.html#subscribe2-o" class="btn btn-black">ХОЧУ ТРЕНИНГ</a></div>
                     </div>
                 </div>
             </div>
@@ -308,7 +308,7 @@
                     </div>
                     <div class="mbr-plan-body card-block">
                       <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="background-color: transparent;">Лидерами не рождаются! Не каждому лидеру удается реализовать себя, достичь больших высот. Жизнь часто ставит перед нами выбор: достичь (всего), либо потерять (все). Как развиваться самому и вдохновлять людей на покорение новых вершин, узнаете из курса.</span></li><li class="list-group-item"><span style="background-color: transparent;">-составляющие успеха;</span></li><li class="list-group-item"><span style="background-color: transparent;">-стратегии мышление;</span></li><li class="list-group-item"><span style="background-color: transparent;">-с чего начать;</span></li><li class="list-group-item"><span style="background-color: transparent;">-делай то, что не нравиться неудачникам;</span></li><li class="list-group-item"><span style="background-color: transparent;">-как привлечь денежную энергию;</span></li><li class="list-group-item"><span style="background-color: transparent;">-уникальный бизнес. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><br></li></ul></div>
-                      <div class="mbr-plan-btn"><a href="https://mobirise.com" class="btn btn-black">view more</a></div>
+                      <div class="mbr-plan-btn"><a href="index.html#subscribe2-o" class="btn btn-black">ХОЧУ ТРЕНИНГ</a></div>
                     </div>
                 </div>
             </div>
@@ -331,7 +331,7 @@
                     </div>
                     <div class="mbr-plan-body card-block">
                       <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item">Многие люди, добившись успеха в карьере или бизнесе не стали счастливее. На пути к успеху они потеряли или испортили отношения с близкими и друзьями.</li><li class="list-group-item"> </li><li class="list-group-item">Они еще помнят, когда занимались хобби. Дело в том, что у них разное отношение к успеху и своей жизни.&nbsp;</li><li class="list-group-item">-жизнь=бизнес проект;&nbsp;</li><li class="list-group-item">-параметры счастья;</li><li class="list-group-item">-управление системой счастья;</li><li class="list-group-item">-методы достижения счастья. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li><li class="list-group-item"><br></li></ul></div>
-                      <div class="mbr-plan-btn"><a href="https://mobirise.com" class="btn btn-black">view more</a></div>
+                      <div class="mbr-plan-btn"><a href="index.html#subscribe2-o" class="btn btn-black">ХОЧУ ТРЕНИНГ</a></div>
                     </div>
                 </div>
             </div>
@@ -429,7 +429,7 @@
 
                           <form action="https://mobirise.com/" method="post" data-form-title="Обратная связь">
 
-                              <input type="hidden" value="SM0DvSLHmfMKq0dR/LDlftDpUmtz1eTvW45ktZG7IiPzD7Ysvq5HVvmc6OK9sYu+oV3px+/oQRNNfJGPzbbs4xmxHCU6yya/rgEi7Efa72beq/4DhIqRxCmioj7FRpDp" data-form-email="true">
+                              <input type="hidden" value="wOdD5KT7qpL8sBt6/ef+kbJVVfdrKFeACQwsIZQ3PfXYNkInLdOiLs4aND1qcHIEbeTtj//zOqyvvCJMcLdXERXUraBOF84CMehM46rv3eTRD3fHPOO6PHWJWyfc/+JN" data-form-email="true">
 
                               <div class="form-group">
                                   <label class="form-control-label">Имя*</label>
@@ -468,7 +468,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2 styled"></h3>
-                <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/mobirise"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/pages/Mobirise/1616226671953247"><i class="socicon socicon-facebook"></i></a>  <a class="btn btn-social" title="YouTube" target="_blank" href="https://www.youtube.com/channel/UCt_tncVAetpK5JeM8L-8jyw"><i class="socicon socicon-youtube"></i></a> <a class="btn btn-social" title="Instagram" target="_blank" href="https://instagram.com/"><i class="socicon socicon-instagram"></i></a> <a class="btn btn-social" title="Pinterest" target="_blank" href="https://www.pinterest.com/mobirise/"><i class="socicon socicon-pinterest"></i></a>  <a class="btn btn-social" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/mobirise"><i class="socicon socicon-linkedin"></i></a> <a class="btn btn-social" title="VKontakte" target="_blank" href="#"><i class="socicon socicon-vkontakte"></i></a> <a class="btn btn-social" title="Odnoklassniki" target="_blank" href="#"><i class="socicon socicon-odnoklassniki"></i></a> </div>
+                <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/"><i class="socicon socicon-facebook"></i></a>  <a class="btn btn-social" title="YouTube" target="_blank" href="https://www.youtube.com/"><i class="socicon socicon-youtube"></i></a> <a class="btn btn-social" title="Instagram" target="_blank" href="https://instagram.com/"><i class="socicon socicon-instagram"></i></a> <a class="btn btn-social" title="Pinterest" target="_blank" href="https://www.pinterest.com/"><i class="socicon socicon-pinterest"></i></a>  <a class="btn btn-social" title="LinkedIn" target="_blank" href="https://www.linkedin.com/"><i class="socicon socicon-linkedin"></i></a> <a class="btn btn-social" title="VKontakte" target="_blank" href="vk.com"><i class="socicon socicon-vkontakte"></i></a> <a class="btn btn-social" title="Odnoklassniki" target="_blank" href="ok.ru"><i class="socicon socicon-odnoklassniki"></i></a> </div>
             </div>
         </div>
     </div>
